tests/test_default/bad/conflict.catala_en
## Article

```catala
declaration scope A:
  context x content integer

scope A:
  definition x under condition true consequence equals 1
  definition x under condition true consequence equals 0
```

```catala-test-inline
$ catala Interpret -s A
[ERROR] There is a conflict between multiple valid consequences for assigning the same variable.

This consequence has a valid justification:
 --> tests/test_default/bad/conflict.catala_en
  | 
8 |   definition x under condition true consequence equals 1
  |                                                        ^
  + Article

This consequence has a valid justification:
 --> tests/test_default/bad/conflict.catala_en
  | 
9 |   definition x under condition true consequence equals 0
  |                                                        ^
  + Article
```
